fixtures/vyper/simple/overflow/negative/i128-0.3.vy
#! {
#!   "modes": [
#!     "V <=0.3.10"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "-170141183460469231731687303715884105728"
#!           ],
#!           "caller": "0xBEC268569b6B7D4A0A38D02AFB7f3d85E4324edB"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: int128) -> int128:
    return witness - 1
